@@ -744,6 +744,10 @@ SRTFILTER_FILTER_NAME=Untertitel Dateien
 
 INIFILTER_FILTER_NAME=Schl\u00fcssel=Wert Textdateien
 
+# DokuWikiFilter.java
+
+DWFILTER_FILTER_NAME=DokuWiki Dateien
+
 # org.omegat.filters3.xml.opendoc.OpenDocFilter
 
 OpenDoc_FILTER_NAME=OpenDocument/OpenOffice.org-Dateien
