@@ -823,6 +823,10 @@ Android_FILTER_NAME=Fichiers de ressource Android
 
 INIFILTER_FILTER_NAME=Fichiers textes Cl\u00e9=Valeur
 
+# DokuWikiFilter.java
+
+DWFILTER_FILTER_NAME=Fichiers DokuWiki
+
 # org.omegat.filters3.xml.opendoc.OpenDocFilter
 
 OpenDoc_FILTER_NAME=Fichiers OpenDocument/OpenOffice.org
@@ -865,7 +869,7 @@ ABOUTDIALOG_TITLE=\u00c0 propos de OmegaT
 ABOUTDIALOG_COPYRIGHT=Copyright \u00a9 2000-2010 Keith Godfrey, Maxym Mykhalchuk et d'autres personnes
 
 ABOUTDIALOG_LICENSE_BUTTON=&Licence
-ABOUTDIALOG_CONTRIBUTORS=OmegaT est un outil de Traduction Assist\u00e9e par Ordinateur libre, \u00e0 code source ouvert et multiplateforme, avec recherche de correspondances, m\u00e9moire de traduction, recherche par mots clefs, glossaires et r\u00e9utilisation des traductions dans des projets modifi\u00e9s.\n\nOmegaT est l'\u0153uvre de Keith Godfrey.\nLe coordinateur du projet OmegaT est Marc Prior.\n\nContributions au code : \nZoltan Bartko, Didier Briel (responsable de versions), Kim Bruning, Alex Buloichik, Sandra Jean Chua, Martin Fleurke, Wildrich Fourie, Thomas Huriaux, Fabi\u00e1n Mandelbaum, Maxym Mykhalchuk, Arno Peters, Henry Pijffers, Tiago Saboga, Andrzej Sawu\u0142a, Benjamin Siband et Martin Wunderlich\n\nLes autres contributions sont d\u00e9taill\u00e9es dans le fichier readme_fr.txt.\n\nOmegaT utilise les biblioth\u00e8ques suivantes :\n  HTMLParser par Somik Raha, Derrick Oswald, etc. (Licence LGPL)\n  MRJ Adapter par Steve Roy (licence LGPL)\n  VLDocking Framework 2.1.4 par VLSolutions (licence CeCILL)\n  Hunspell par L\u00e1szl\u00f3 N\u00e9meth et d'autres personnes (Licence LGPL)\n  JNA par Todd Fast, Timothy Wall et d'autres personnes (Licence LGPL)\n  Swing-Layout 1.0.2 (licence LGPL)\n  Jmyspell 2.1.4 (licence LGPL) \n  JAXB (GPLv2 + classpath exception)
+ABOUTDIALOG_CONTRIBUTORS=OmegaT est un outil de Traduction Assist\u00e9e par Ordinateur libre, \u00e0 code source ouvert et multiplateforme, avec recherche de correspondances, m\u00e9moire de traduction, recherche par mots clefs, glossaires et r\u00e9utilisation des traductions dans des projets modifi\u00e9s.\n\nOmegaT est l'\u0153uvre de Keith Godfrey.\nLe coordinateur du projet OmegaT est Marc Prior.\n\nContributions au code : \nZoltan Bartko, Volker Berlin, Didier Briel (responsable de versions), Kim Bruning, Alex Buloichik, Sandra Jean Chua, Martin Fleurke, Wildrich Fourie, Thomas Huriaux, Fabi\u00e1n Mandelbaum, Maxym Mykhalchuk, Arno Peters, Henry Pijffers, Tiago Saboga, Andrzej Sawu\u0142a, Benjamin Siband et Martin Wunderlich\n\nLes autres contributions sont d\u00e9taill\u00e9es dans le fichier readme_fr.txt.\n\nOmegaT utilise les biblioth\u00e8ques suivantes :\n  HTMLParser par Somik Raha, Derrick Oswald, etc. (Licence LGPL)\n  MRJ Adapter par Steve Roy (licence LGPL)\n  VLDocking Framework 2.1.4 par VLSolutions (licence CeCILL)\n  Hunspell par L\u00e1szl\u00f3 N\u00e9meth et d'autres personnes (Licence LGPL)\n  JNA par Todd Fast, Timothy Wall et d'autres personnes (Licence LGPL)\n  Swing-Layout 1.0.2 (licence LGPL)\n  Jmyspell 2.1.4 (licence LGPL) \n  JAXB (GPLv2 + classpath exception)
 
 # LicenseDialog.java
 
