@@ -1,10 +1,14 @@
 ----------------------------------------------------------------------
  OmegaT 2.1.5 update 2
 ----------------------------------------------------------------------
-  0 Enhancement
+  1 Enhancement
   1 Bugfix
 ----------------------------------------------------------------------
 2.1.5 update 2 vs. 2.1.5 update 1
+
+  Other enhancements:
+
+  - DokuWiki file filter
 
   Bug fixes:
 
